--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* General styles */
+
 * {
     padding: 0;
     margin: 0;
@@ -28,12 +29,15 @@ body {
     }
 }
 
+
 /* Main container */
+
 .container {
     position: relative;
     width: 90%;
     max-width: 600px;
     height: auto;
+    max-height: 640px;
     margin: 20px auto;
     padding: 20px;
     border-radius: 15px;
@@ -45,7 +49,9 @@ body {
     /* Enable vertical scrollbar */
 }
 
+
 /* Search wrapper */
+
 .search-wrapper {
     display: flex;
     justify-content: center;
@@ -86,7 +92,9 @@ body {
     background-color: #3459c6;
 }
 
+
 /* Result */
+
 #result {
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
@@ -118,7 +126,9 @@ body {
     -webkit-text-fill-color: transparent;
 }
 
+
 /* Footer */
+
 footer {
     position: fixed;
     bottom: 10px;
@@ -131,7 +141,9 @@ footer {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
+
 /* Done by */
+
 .done-by {
     position: absolute;
     bottom: -40px;
@@ -155,7 +167,9 @@ footer {
     text-decoration: underline;
 }
 
+
 /* Responsive Styles */
+
 @media screen and (max-width: 768px) {
     .container {
         width: 90%;
